test/fail/arrayinit2.min
program
start
    1, 2, 3 ! $$ Array initializer can't be used in expressions
end
